tests/ui/typeck/issue-87181/enum-variant.stderr
error[E0599]: no method named `foo` found for enum constructor `fn() -> Foo {Foo::Tup}` in the current scope
  --> $DIR/enum-variant.rs:14:15
   |
LL |     thing.bar.foo();
   |               ^^^ method not found in `fn() -> Foo {Foo::Tup}`
   |
help: use parentheses to construct this tuple variant
   |
LL |     (thing.bar)().foo();
   |     +         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
